# BsdiffDemo

./: README.md
app/: build.gradle
app/release/: old.apk
app/src/androidTest/java/com/example/bsdiffdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/bsdiffdemo/: MainActivity.java
app/src/main/java/com/example/utils/: UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/bsdiffdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
